# pysource-codegen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ast_info.py  find_new_issue.py  noxfile.py  pyproject.toml  pysource_codegen.py  run_all.py
.github/workflows/: ci.yml
pysource_codegen/: __init__.py  __main__.py  _codegen.py  _core.py  _limits.py  _utils.py  ast_info.py  static_type_info.py  static_type_info37.py  types.py
src/pysource_codegen/: __about__.py  __init__.py  __main__.py  _codegen.py  _utils.py  types.py
tests/: TestBase.py  conftest.py  test_codegen.py  test_fix_nonlocal.py  test_invalid_ast.py  test_valid_source.py
