[tool.poetry]
name = "pysource-codegen"
version = "0.4.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pysource_codegen"}]

[tool.poetry.scripts]
pysource-codegen = "pysource_codegen.__main__:run"

[tool.poetry.dependencies]
python = "^3.7"
astunparse = { version =  "^1.6.3", python ="<3.9"}
typed-ast = "^1.5.5"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.3.4"
pytest-xdist = {extras = ["psutil"], version = "^3.2.1"}
pytest = "^7.2.1"
mypy = "^1.2.0"
coverage-enable-subprocess = "^1.0"
inline-snapshot = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["tests","pysource_codegen"]
parallel = true
branch = true
data_file = "$TOP/.coverage"

[tool.coverage.report]
exclude_lines = ["assert False", "raise NotImplemented"]
