[tool.poetry]
name = "pysource-codegen"
version = "0.5.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pysource_codegen"}]

[tool.commitizen]
changelog_incremental = true
major_version_zero = true
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
  "pysource_codegen/__init__.py:version"
]
version_provider = "poetry"

[tool.poetry.scripts]
pysource-codegen = "pysource_codegen.__main__:run"




[tool.poetry.dependencies]
python = ">=3.8"
astunparse = { version =  ">=1.6.3", python ="<3.9"}
#typed-ast = ">=1.5.5"
typing-extensions = ">=4.7.1"

[tool.poetry.group.dev.dependencies]
rich = ">=12.0.0"
pytest-xdist = {extras = ["psutil"], version = ">=3.2.1"}
pytest = ">=7.2.1"
mypy = ">=1.2.0"
coverage-enable-subprocess = ">=1.0"
inline-snapshot = ">=0.4.0"
pysource-minimize = ">=0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["tests","pysource_codegen"]
parallel = true
branch = true
data_file = "$TOP/.coverage"

[tool.coverage.report]
exclude_lines = ["assert False", "raise NotImplemented"]

[tool.mypy]
exclude="tests/.*_samples"
